--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 .texto_post {
-  color: red;
+  color: rgb(0, 0, 0);
 }
 
 h2 {
@@ -29,6 +29,7 @@ p {
 #campo_form {
   color: rgb(255, 255, 255);
   font-weight: 500;
+  font-size: 15px;
   background: rgb(8, 8, 8);
   justify-content: center;
   text-align: center;
@@ -50,10 +51,10 @@ p {
 
 
 form {
-  margin-top: 9rem;
+  margin-top: 6rem;
   margin-left: 64px;
   padding: 15px;
-  background: #a10d4b;
+  background: #38021a;
   color: rgb(255, 255, 255);
   position: fixed;
   top: 0;
@@ -78,34 +79,38 @@ form {
 }
 
 .card-body {
-  background: #f5b4b4;
+  background: #ecafaf;
   padding: 0 !important;
+  color:rgb(7, 7, 7);
+  font-family:Georgia, 'Times New Roman', Times, serif
 }
 
 #creado {
-  background: #002b55;
+  background: #0080ff;
 }
 
 .card {
   background: #f5b4b4 !important;
   border: 1px solid rgb(255, 255, 255) !important;
   border-radius: 18px !important;
-  box-shadow: 0 0 50px rgba(255, 215, 0, 0.5);
+  box-shadow: 0 0 450px rgba(255, 215, 0, 0.5);
   overflow: hidden;
   width: 60%;
-  margin: 10px 10px 10px 0 !important;
+  margin: 0 10px 10px 0 !important;
 }
 
 .card:hover {
-  box-shadow: 0 0 80px rgba(255, 215, 0, 0.9);
+  box-shadow: 0 0 500px rgba(0, 0, 0, 0.99);
 }
 
 .card img {
   width: auto;
   height: 180px;
   object-fit: cover;
-  border: 1px solid rgb(255, 255, 255) !important;
-  border-radius: 18px;
+  border: 1px solid rgb(255, 255, 255)!important;
+  border-bottom: 15px solid rgb(99, 13, 73)!important;
+ 
+  
 }
 
 .stars {
@@ -124,44 +129,38 @@ form {
 
 @keyframes changeBackground {
   0% {
-    background-image: url('./images/nebul.jpg');
-    background-position: 0 0;
-    transform: rotate(10deg);
-  }
-
-  16.666% {
-    background-image: url('./images/harry');
-    background-position: 0 0;
-    transform: rotate(30deg);
+    background-image: url('./images/goku.jpg');
+    background-position: center;
+    transform: rotate(0deg);
   }
 
   33.333% {
-    background-image: url('./images/grogu.jpg');
-    background-position: 0 100%;
-    transform: rotate(180deg);
+    background-image: url('./images/harry.jpg');
+    background-position: center;
+    transform: rotate(15deg);
   }
 
   50% {
-    background-image: url('./images/intensam.jpg');
-    background-position: 0 100%;
-    transform: rotate(270deg);
+    background-image: url('./images/grogu.jpg');
+    background-position: center;
+    transform: rotate(25deg);
   }
 
   66.666% {
-    background-image: url('./images/spiderman-l.jpg');
-    background-position: 0 100%;
-    transform: rotate(360deg);
+    background-image: url('./images/intensam.jpg');
+    background-position: center;
+    transform: rotate(40deg);
   }
 
   83.333% {
-    background-image: url('./images/goku-colores.jpg');
-    background-position: 0 100%;
-    transform: rotate(450deg);
+    background-image: url('./images/spiderman-l.jpg');
+    background-position: center;
+    transform: rotate(60deg);
   }
 
   100% {
     background-image: url('./images/game.jpg');
-    background-position: 0 100%;
-    transform: rotate(540deg);
+    background-position: center;
+    transform: rotate(80deg);
   }
 }
